# Kaleidoscope

./: CMakeLists.txt  README.md  lexer.cpp
include/: ast.hpp  codegen.hpp  lexer.hpp  log.hpp  parser.hpp
src/: ast.cpp  codegen.cpp  lexer.cpp  log.cpp  parser.cpp
